<resources>
    <string name="app_name">Compass</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_featured">Featured</string>
    <string name="menu_zoom">Zoom</string>
    <string name="menu_recruiting">Recruiting</string>
    <string name="menu_management">Management</string>
    <string name="menu_communication">Communication</string>
    <string name="menu_way_of_work">Way of work</string>
    <string name="menu_space">Space</string>
    <string name="menu_meetings">Meetings</string>
    <string name="menu_connection">Connection</string>
    <string name="menu_social">Social</string>
    <string name="menu_boundaries">Boundaries</string>
    <string name="menu_health">Health</string>
    <string name="menu_accountability">Accountability</string>
    <string name="dummy_author_name">Kim Gardner</string>
    <string name="dummy_author_role">Director of Engineering,\nCoal Vox Media</string>
    <string name="dummy_tip_content_long">Slack integration to spin up ad hoc meetings. When you\'re
        working remotely, one of the hardest things to replicate are those side conversations,
        quick chats, bump-into-you in the hallway type discussions that can be really
        powerful to fix a problem or get a few heads on something in the moment.
        Spinning up Zoom meetings quickly really helps there.
    </string>
    <string name="dummy_tip_content_short">Ask yourself, did you actually need to schedule this meeting in the first place ?</string>
    <string name="see_all_block_tips">See all (%d)</string>
    <string name="share_this_tip">Share this tip</string>
    <string name="work_with_me">Work with me</string>
    <string name="title_activity_tip_details" />
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_add_tip">AddTipActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_motto">Best practices and\ntips for working remotely.</string>
    <string name="footer">GADS Community Projects Challenge 2020</string>
    <string name="marquee">...</string>
</resources>